<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:backgroundTint="@color/purple">

    <RelativeLayout
        android:id="@+id/item_card_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameOfPack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/nameOfPack"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info1OfPack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameOfPack"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:text="@string/info1OfPack"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info2OfPack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info1OfPack"
            android:paddingBottom="15dp"
            android:text="@string/info2OfPack"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info3OfPack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info2OfPack"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingBottom="10dp"
            android:text="@string/info3OfPack"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/info3OfPack"
            android:background="@color/purple"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priceOfPack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/priceOfPack"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/perMonthOfPack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:paddingTop="10dp"
                android:text="@string/perMonthOfPack"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/linear_layout1"
            android:gravity="center">

            <Button
                android:id="@+id/packAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/packAddToCart"
                android:textColor="@color/purple"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/delete"
                android:textColor="@color/purple"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>